--- a/MoneyM/Storyboards/NewOperation.storyboard
+++ b/MoneyM/Storyboards/NewOperation.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -66,13 +66,13 @@
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Amount" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lhC-fK-oYn">
                                                         <rect key="frame" x="16" y="20" width="311" height="50"/>
-                                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                                        <color key="backgroundColor" name="UITextField Background Color"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="quJ-x2-sjV"/>
                                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="rck-as-S4G"/>
                                                         </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" keyboardType="numberPad"/>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadiusV">
                                                                 <real key="value" value="14"/>
@@ -102,7 +102,7 @@
                                                             </button>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ie6-Q9-sTA">
                                                                 <rect key="frame" x="163.5" y="0.0" width="147.5" height="50"/>
-                                                                <color key="backgroundColor" name="Main Background Color"/>
+                                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                                 <state key="normal" title="Button"/>
                                                                 <buttonConfiguration key="configuration" style="plain" title="Income"/>
                                                                 <userDefinedRuntimeAttributes>
@@ -122,7 +122,7 @@
                                                     </stackView>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cFN-Lb-KpL">
                                                         <rect key="frame" x="16" y="152" width="311" height="50"/>
-                                                        <color key="backgroundColor" name="Main Background Color"/>
+                                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="GR0-2C-Hqh"/>
                                                             <constraint firstAttribute="height" constant="50" id="diV-a5-vXI"/>
@@ -141,7 +141,7 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" name="UIView Background Color"/>
                                                 <constraints>
                                                     <constraint firstItem="cFN-Lb-KpL" firstAttribute="leading" secondItem="Uf5-vE-44g" secondAttribute="leading" priority="750" constant="16" id="0H3-gH-4Bh"/>
                                                     <constraint firstItem="cFN-Lb-KpL" firstAttribute="top" secondItem="MlS-Nj-x2w" secondAttribute="bottom" constant="16" id="4VQ-y9-DEd"/>
@@ -168,7 +168,7 @@
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Note" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="usz-qs-CRL">
                                                         <rect key="frame" x="16" y="20" width="311" height="50"/>
-                                                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                                        <color key="backgroundColor" name="UITextField Background Color"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="Mc7-i1-bcH"/>
                                                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="400" id="Te6-6C-Jkg"/>
@@ -189,7 +189,7 @@
                                                         </constraints>
                                                     </datePicker>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" name="UIView Background Color"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="276" id="43I-Bf-tCK"/>
                                                     <constraint firstItem="usz-qs-CRL" firstAttribute="centerX" secondItem="Jsp-Kv-7a0" secondAttribute="centerX" id="7nC-qK-vC3"/>
@@ -425,6 +425,12 @@
         <namedColor name="Table View Cell Background">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="UITextField Background Color">
+            <color red="0.89800000190734863" green="0.89800000190734863" blue="0.9179999828338623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="UIView Background Color">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
@@ -440,8 +446,8 @@
         <systemColor name="systemGray4Color">
             <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
