--- a/MoneyM/Storyboards/Base.lproj/Main.storyboard
+++ b/MoneyM/Storyboards/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yXz-Yw-dhq">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" allowsSelectionDuringEditing="YES" allowsMultipleSelection="YES" allowsMultipleSelectionDuringEditing="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="yXz-Yw-dhq">
                                 <rect key="frame" x="0.0" y="88" width="428" height="789"/>
                                 <color key="backgroundColor" name="Main Background Color"/>
                                 <prototypes>
@@ -115,7 +115,7 @@
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="SJJ-kU-cbl"/>
                                     <barButtonItem style="plain" id="WW5-Qs-Iac">
-                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="hnJ-sa-tUU">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="hnJ-sa-tUU">
                                             <rect key="frame" x="252" y="9.6666666666666679" width="156" height="34.666666666666657"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
@@ -159,6 +159,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="accountsTableView" destination="yXz-Yw-dhq" id="Mim-Di-30q"/>
+                        <outlet property="btnEdit" destination="pIJ-2d-J2c" id="NR9-YQ-y9x"/>
+                        <outlet property="btnNewAccount" destination="hnJ-sa-tUU" id="UHq-2t-Lif"/>
                         <outlet property="newAccountButton" destination="hnJ-sa-tUU" id="jeu-82-Jhh"/>
                     </connections>
                 </viewController>
